--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,19 @@
 ul{
 	list-style-type: none;
-	margin: 0;
-	padding: 0;
 }
 
-li{
+ul li:nth-child(4),ul li:nth-child(5),ul {min-width: 30px;min-height:30px}
+
+li {
+	display: inline-block;
+	vertical-align: middle;
+	margin-right: 10px
+ }
+
+
+.nav{
 	float: right;
-	padding: 5px;
+	margin: 7px 15px 0px 0px;
 }
 
 #content{
@@ -15,18 +22,25 @@ li{
 	right: 975px;
 }
 
-.icons{
-	display: inline-block;
-	width: 300px;
-	height: 300px;
-	background: url(../images/icons.png);
-	background-repeat: no-repeat;
+.bell {
+    background-image: url("../images/sprite.png");
+    background-position: -69px -69px;
+    position: absolute;
+    width: 30px;
+    height: 30px;
 }
 
-.grid{
-	background-position: 350px 110px;
+.apps {
+    background-image: url("../images/sprite.png");
+    background-position: -69px -854px;
+    position: absolute;
+    width: 30px;
+    height: 30px;
 }
 
 
-.crop { background: url(../images/icons.png); overflow: hidden; background-repeat:no-repeat;}
-.crop img { width: 20%; position: relative; top: -70px; left:-270px;}
+.share {
+	border-radius: 1px;
+	background-color: #f4f4f4;
+	padding: 7px 15px
+ }
