--- a/css/main.css
+++ b/css/main.css
@@ -10,10 +10,7 @@ li {
 
 .nav{
 	float: right;
-	margin-top:10px;
-	margin-right:10px;
-	font-family: arial;
-	font-size: 12px;
+	height:40px;
 }
 
 span{
@@ -23,7 +20,6 @@ span{
 	color:#777;
 	font-weight: bold;
 	font-family: arial;
-
 }
 
 .google{
@@ -52,17 +48,33 @@ button{
 
 
 form{
-
+	position:relative;
+	right:70px;
 
 }
 
 .btn1{
-
-
+	position:relative;
+	left:40px;
+	font-size:10px;
 }
 
 .btn2{
-
-	
+	position:relative;
+	left:50px;
+	font-size:10px;
 }
 
+input[type=text], textarea {
+  -webkit-transition: all 0.30s ease-in-out;
+  -moz-transition: all 0.30s ease-in-out;
+  -ms-transition: all 0.30s ease-in-out;
+  -o-transition: all 0.30s ease-in-out;
+  outline: none;
+  border: 1px solid #DDDDDD;
+}
+ 
+input[type=text]:focus, textarea:focus {
+  box-shadow: 0 0 5px rgba(81, 203, 238, 1);
+  border: 1px solid rgba(81, 203, 238, 1);
+}
